# ahah

./: .gitattributes  .gitignore  .pre-commit-config.yaml  DATA_NOTES.md  Dockerfile  Makefile  README.md  dvc.yaml  env.yml  environment.yml  join_carto.py  nohup.out  pyproject.toml  setup.py
ahah/: README.md  __init__.py  aggregate_lsoa.py  air.py  air_lsoa.py  create_index.py  get_nhs.py  os_highways.py  preprocess.py  process_air.py  process_routing.py  process_routing_dsh.py  pyproject.toml  routing.py  routing_ahah.py  routing_cpu.py  routing_dsh.py  test_pcs.py
ahah/common/: logger.py  utils.py
ahah/dsh/: aggregate_lsoa_dsh.py  process_routing_dsh.py  routing_dsh.py  utils_dsh.py
ahah/dsh/ahah/: process_routing_dsh.py  route_dsh.py  routing_dsh.py
ahah/figs/: profile_vs_cpu.py
ahah/guardian/: aggregate_msoa.py  air_msoa.py  guardian.py  guardian_preprocess.py  guardian_routing.py
ahah/src/ahah/: __init__.py
docs/: aggregate_lsoa.html  create_index.html  index.html  process_routing.html  routing.html
docs/ahah/: aggregate_lsoa.html  create_index.html  get_nhs.html  greenspace_passive.html  index.html  os_highways.html  os_highways_2021.html  process_air.html  process_routing.html  routing.html  routing_cpu.html  utils.html
docs/ahah/common/: utils.html
docs/common/: index.html  logger.html  utils.html
explore/: compare_prev.py  liverpool.py  no_buffer.py
reports/: DATA.md  data_sources.md  data_sources.ods  data_sources.xlsx  gpu_routing.docx  gpu_routing.ipynb  gpu_routing.qmd
reports/figs/: profile_vs_cpu.py
scripts/: process.py  vis.py
