[project]
name = "ahah"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cjber", email = "cjberragan@gmail.com" }
]
dependencies = [
    "rich>=13.7.1",
    "requests>=2.31.0",
    "osmium>=3.7.0",
    "ukroutes @ git+https://github.com/cjber/ukroutes",
    "geojson>=3.1.0",
    "matplotlib>=3.9.1",
    "fastexcel>=0.10.4",
    "pyqt6>=6.7.1",
    "h3pandas>=0.2.6",
    "dvc>=3.51.3",
    "beautifulsoup4>=4.12.3",
    "openpyxl>=3.1.5",
    "ydata-profiling>=4.9.0",
    "plotly>=5.23.0",
    "dash>=2.17.1",
    "folium>=0.17.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.23.0",
    "ipdb>=0.13.13",
    "sourcery-cli>=1.16.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ahah"]
