[project]
name = "ahah"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cjber", email = "cjberragan@gmail.com" }
]
dependencies = [
    "ukroutes @ git+https://github.com/cjber/ukroutes",
    "geopandas>=1.0.1",
    "polars>=1.4.1",
    "matplotlib>=3.9.2",
    "pyqt6>=6.7.1",
    "dvc>=3.53.2",
    "fastexcel>=0.11.5",
    "marimo>=0.8.0",
]
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.23.0",
    "ipdb>=0.13.13",
    "sourcery-cli>=1.16.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ahah"]
